# msp432-hello

./: Cargo.toml  MSP432P401R.ccxml  Makefile  README.md  build.rs  debug.gdb  debug.sh  openocd.cfg
.cargo/: config
examples/: interrupt.rs  timer.rs
src/: main.rs
